# screen_control_backend

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  create_release.sh  download.sh
.devcontainer/: devcontainer.json
.github/: release-body.md
.github/workflows/: build_and_release.yml
src/: app_env.rs  app_error.rs  cron.rs  heartbeat.rs  main.rs  message_handler.rs  sysinfo.rs  systemd.rs
src/ws/: connect.rs  connection_details.rs  mod.rs  socket.rs  ws_sender.rs
src/ws_messages/: incoming.rs  outgoing.rs
